--- a/app/views/bootcamp.hbs
+++ b/app/views/bootcamp.hbs
@@ -76,6 +76,36 @@
   .catchphrase h3 {
     text-align: center;
   }
+
+  /* FEATURE */
+  .features {
+    color: #37474f;
+    margin: 20px 0px 20px 0px;
+  }
+  .features .row {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .features .border-box {
+    border: solid 2px;
+    padding: 10px;
+    min-height: 340px;
+  }
+  .features ul {
+    padding: 0px;
+  }
+  .features li {
+    clear: both;
+    list-style-type: none;
+    display: inline-block;
+    padding: 10px 5px 10px 5px;
+  }
+  .features img {
+    float: left;
+    width: 40px;
+    margin-right: 10px;
+  }
+
 </style>
 
 <!-- PROMOTE -->
@@ -135,21 +165,21 @@
       <div class="row">
         <section class="col-md-4">
           <figure>
-            <img src="img/bootcamp-man-climbing-stairs.png"/>
+            <img src="/img/bootcamp-man-climbing-stairs.png"/>
           </figure>
           <h2>For Beginner</h2>
           <span>Data Science 를 처음 접하는 사람들을 위하여 현직 Data Scientist 가 디자인한 커리큘럼에 따라, R 을 활용하여 기본적인 코드를 스스로 작성할 수 있고, 이를 활용하기 위한 Pacage 와 Toolset을 사용할 수 있는 기초 단계의 Project 를 수행</span>
         </section>
         <section class="col-md-4">
           <figure>
-            <img src="img/bootcamp-businessman-1.png"/>
+            <img src="/img/bootcamp-businessman-1.png"/>
           </figure>
           <h2>For Advancer</h2>
           <span>Data 활용에 있어 Hadoop, Spark 와 같은 Big Data Tool 을 사용하여 Data 를 분석해내고 , Visualiztion 을 수행해 낼 수 있는 전문가로써의 능력을 향상시킬 수 있도록 디자인된 Project 를 수행하여 실무적 경험을 쌓고 Portfolio 를 제작할 수 있도록 진행</span>
         </section>
         <section class="col-md-4">
           <figure>
-            <img src="img/bootcamp-business-agreement.png"/>
+            <img src="/img/bootcamp-business-agreement.png"/>
           </figure>
           <h2>To Collaborate</h2>
           <span>기업 연계 Project 를 수행하여 Real Industry Data 를 분석 및 시각화를 수행하고 나아가 결과물에 숨겨져있는  사회적 현상과 미래 예측 등 산업에 활용할 수 있는 논리적 결론을 도출할 수 있도록 심화 Project  수행</span>
@@ -163,6 +193,76 @@
     <div class="container">
       <h1>Headstart Bootcamp</h1>
       <h3>기존의 교육 방식과는 달리 현재 Data Scientist 로 활동하고 있는 전문가들의 경험을 바탕으로 디자인된 Project 를 Bootcamp 기간 동안 수행하여 기술적 능력과 실무적 능력을 향상시키고, 나아가 Portfolio 로 활용될 수 있도록 실전 경험 프로그램을 운영합니다.</h3>
+    </div>
+  </article>
+
+  <!-- FEATURES -->
+  <article class="features">
+    <div class="container">
+      <h1>Bootcamp Features</h1>
+    </div>
+    <div class="container row">
+      <section class="col-md-4">
+        <div class="border-box">
+          <h3>Project Base</h3>
+          <ul>
+            <li>
+              <img src="/img/bootcamp-hand-writing-with-ballpen.png"/>
+              현직 Data Scietist 의 경험에 의해 디자인된 Project 수행
+            </li>
+            <li>
+              <img src="/img/bootcamp-statistics.png"/>
+              Project 를 수행함에 따라 실전적 감각 및 실력 향상
+            </li>
+            <li>
+              <img src="/img/bootcamp-class-group.png"/>
+              수행한 Project 결과를 매주 Presentation 진행
+            </li>
+            <li>
+              <img src="/img/bootcamp-networking-2.png"/>
+              팀원 간의 인적 인프라 형성
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="col-md-4">
+        <div class="border-box">
+          <h3>Real Industry</h3>
+          <ul>
+            <li>
+              <img src="/img/bootcamp-businessman-2.png"/>
+              기업의 Job Description을 반영하여 Project 수행
+            </li>
+            <li>
+              <img src="/img/bootcamp-networking-1.png"/>
+              현업의 업무 수행 방식에 맞춘 Project 수행
+            </li>
+            <li>
+              <img src="/img/bootcamp-professor-with-economy-graphs-on-a-clipboard.png"/>
+              참여한 프로젝트의 결과를 포트폴리오로 제작
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="col-md-4">
+        <div class="border-box">
+          <h3>From Basic to Intensive</h3>
+          <ul>
+            <li>
+              <img src="/img/bootcamp-growth.png"/>
+              Beginner Level 부터 Advanced Level 까지
+            </li>
+            <li>
+              <img src="/img/bootcamp-placeholder.png"/>
+              장소에 따른 다양한 Program
+            </li>
+            <li>
+              <img src="/img/bootcamp-open-book.png"/>
+              기초 단계 Pre-Courses 제공
+            </li>
+          </ul>
+        </div>
+      </section>
     </div>
   </article>
 </main>
