bootcamp us exclusive

--- a/app/views/bootcamp.hbs
+++ b/app/views/bootcamp.hbs
@@ -106,6 +106,23 @@
     margin-right: 10px;
   }
 
+  /* US EXCLUSIVE */
+  .us-exlusive {
+    background-color: #39AEA6;
+  }
+  .us-exlusive img {
+    float: left;
+    width: 60px;
+    margin-right: 10px;
+  }
+  .us-exlusive .border-box {
+    height: 80px;
+    border: solid 2px #37474f;
+    color: #000000;
+    background-color: #ffffff;
+    padding: 10px;
+    margin: 10px;
+  }
 </style>
 
 <!-- PROMOTE -->
@@ -263,6 +280,45 @@
           </ul>
         </div>
       </section>
+    </div>
+  </article>
+
+  <!-- US EXCLUSIVE -->
+  <article class="us-exlusive">
+    <div class="container">
+      <h1>Only US Bootcamp</h1>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="border-box">
+            <img src="/img/bootcamp-buildings.png"/>
+            <b>현지 기업 방문</b>
+            <p>Google, Apple, Tesla 등 글로벌 리더 기업 견학 프로그램</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="border-box">
+            <img src="/img/bootcamp-vincent-thomas-bridge.png"/>
+            <b>미국 기업 문화 체험</b>
+            <p>현재 미국 가업에서 업무를 진행하는방식과 동일한 방법으로 진행</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="border-box">
+            <img src="/img/bootcamp-businessman-3.png"/>
+            <b>Network 형성</b>
+            <p>Social Event 에 참여하여 실리콘 밸리의 트렌드 를 읽고 글로벌 네트워크를 형성</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="border-box">
+            <img src="/img/bootcamp-presentation.png"/>
+            <b>Seminar & Workshop</b>
+            <p>실리콘밸리 에서 진행되는 Seminar 및 Workshop 참여</p>
+          </div>
+        </div>
+      </div>
     </div>
   </article>
 </main>
