isolate contact fragment. add contact on bootcamp.

--- a/app/views/bootcamp.hbs
+++ b/app/views/bootcamp.hbs
@@ -2,7 +2,7 @@
   /* HEADER */
   header {
     text-align: center;
-    background-color: #39AEA6;
+    background-color: #80cbc4;
   }
   header h3 {
     margin: 50px auto 50px auto;
@@ -36,6 +36,7 @@
     width: 80%;
     margin: 10px auto 10px auto;
     display: block;
+    background-color: #80cbc4;
   }
 
   /* CUSTOMER */
@@ -108,7 +109,7 @@
 
   /* US EXCLUSIVE */
   .us-exlusive {
-    background-color: #39AEA6;
+    background-color: #80cbc4;
   }
   .us-exlusive img {
     float: left;
@@ -163,7 +164,7 @@
               <span class="col-md-3">대상 :</span>
               <span class="col-md-9">{{this.target}}</span>
             </div>
-            <button class="btn btn-default">DETAIL</button>
+            <button class="btn btn-default">More Info</button>
           </div>
         </section>
         {{/each}}
@@ -321,4 +322,6 @@
       </div>
     </div>
   </article>
+
+  {{> body/contacts}}
 </main>
