more info on bootcamp item cards

--- a/app/views/bootcamp.hbs
+++ b/app/views/bootcamp.hbs
@@ -153,6 +153,14 @@
             <h4>{{this.loc}}</h4>
             <h3>{{this.title}}</h3>
             <div class="row desc">
+              <span class="col-md-3">목표 :</span>
+              <span class="col-md-9">{{this.subject}}</span>
+            </div>
+            <div class="row desc">
+              <span class="col-md-3">대상 :</span>
+              <span class="col-md-9">{{this.class}}</span>
+            </div>
+            <div class="row desc">
               <span class="col-md-3">집행기간 :</span>
               <span class="col-md-9">{{this.campStart}} ~ {{this.campEnd}}</span>
             </div>
@@ -161,7 +169,7 @@
               <span class="col-md-9">{{this.applyStart}} ~ {{this.applyEnd}}</span>
             </div>
             <div class="row desc">
-              <span class="col-md-3">대상 :</span>
+              <span class="col-md-3">참여기관 :</span>
               <span class="col-md-9">{{this.target}}</span>
             </div>
             <button class="btn btn-default">More Info</button>
