--- a/app/views/bootcamp.hbs
+++ b/app/views/bootcamp.hbs
@@ -1,13 +1,4 @@
 <style>
-  /* HEADER */
-  header {
-    text-align: center;
-    background-color: #80cbc4;
-  }
-  header h3 {
-    margin: 50px auto 50px auto;
-  }
-
   /* ITEM LIST */
   article.item-list {
     background-color: #ffffff;
@@ -126,22 +117,7 @@
   }
 </style>
 
-<!-- PROMOTE -->
-<header>
-  <section class="container">
-    <h1><b>Data Science Bootcamp</b></h1>
-    <h3>
-      Data Science Intensive Course<br/>
-      프로젝트 수행 부터 포트폴리오 제작 까지<br/>
-      Data Scientisct 가 되기 위한 집중 과정
-    </h3>
-    <p>
-      Instructor 가 제공하는 학습 Project 와 개인 Project 수행<br/>
-      Data Science Specialist 와의 1:1 Mentoring<br/>
-      4 주 집중 훈련 캠프
-    </p>
-  </section>
-</header>
+{{> body/header-bootcamp}}
 <main>
   <!-- ITEM LIST -->
   <article class="item-list">
