update bootcamp detail.

--- a/app/views/partials/head/common.hbs
+++ b/app/views/partials/head/common.hbs
@@ -5,31 +5,31 @@
 <title>Headstart Silicon Valley</title>
 
 <!-- BOOTSTRAP -->
-<link rel="stylesheet" type="text/css" href="components/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="/components/bootstrap/dist/css/bootstrap.min.css">
 <!-- BOOTSTRAP CUSTOM THEME gen by http://bootstrap-live-customizer.com-->
-<link rel="stylesheet" type="text/css" href="css/theme.min.css">
+<link rel="stylesheet" type="text/css" href="/css/theme.min.css">
 <!--<link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap-theme.min.css">-->
 <!-- BOOTSTRAP DRAWER -->
-<link rel="stylesheet" type="text/css" href="components/bootstrap-drawer/dist/css/bootstrap-drawer.min.css">
+<link rel="stylesheet" type="text/css" href="/components/bootstrap-drawer/dist/css/bootstrap-drawer.min.css">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!--[if IE]>
-<script src="components/html5shiv/dist/html5shiv.min.js"></script>
-<script src="components/respond/dest/respond.min.js"></script>
+<script src="/components/html5shiv/dist/html5shiv.min.js"></script>
+<script src="/components/respond/dest/respond.min.js"></script>
 <![endif]-->
 <!-- JQUERY -->
 <!--[if !IE]><!-->
-<script src="components/jquery/dist/jquery.min.js"></script>
+<script src="/components/jquery/dist/jquery.min.js"></script>
 <!--<![endif]-->
 <!-- JQUERY LEGACY -->
 <!--[if IE]>
-<script src="components/jquery-legacy/dist/jquery.min.js"></script>
+<script src="/components/jquery-legacy/dist/jquery.min.js"></script>
 <![endif]-->
 <!-- BOOTSTRAP -->
-<script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- BOOTSTRAP DRAWER -->
 <!--[if !IE]><!-->
-<script src="components/bootstrap-drawer/dist/js/drawer.min.js"></script>
+<script src="/components/bootstrap-drawer/dist/js/drawer.min.js"></script>
 <!--<![endif]-->
-<script src="js/common.js"></script>
+<script src="/js/common.js"></script>
 <link rel="stylesheet" type="text/css" href="/css/common.css" />
