--- a/app/views/partials/body/menu.hbs
+++ b/app/views/partials/body/menu.hbs
@@ -40,7 +40,7 @@
     </div>
     <div class="col-md-2">
       <a href="/">
-        <img class="logo" src="img/logo.png">
+        <img class="logo" src="/img/logo.png">
       </a>
     </div>
     <div class="col-md-5">
