add bootcamp apply handlebars

--- a/app/views/bootcamp-detail.hbs
+++ b/app/views/bootcamp-detail.hbs
@@ -334,5 +334,5 @@
   <div class="container">
     <hr/>
   </div>
-  <button class="btn btn-default apply">Apply Now</button>
+  <a href="/bootcamp/1/apply"><button class="btn btn-default apply">Apply Now</button></a>
 </main>
