--- a/app/views/bootcamp.hbs
+++ b/app/views/bootcamp.hbs
@@ -148,7 +148,7 @@
               <span class="col-md-3">참여기관 :</span>
               <span class="col-md-9">{{this.target}}</span>
             </div>
-            <button class="btn btn-default">More Info</button>
+            <a href="/bootcamp/{{this.id}}"><button class="btn btn-default">More Info</button></a>
           </div>
         </section>
         {{/each}}
