--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -48,25 +48,7 @@
     width: 315px;
   }
 
-  /* CATCHPHRASE */
-  .catchphrase {
-    background-color: #37474f;
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-  .catchphrase h1 {
-    text-align: center;
-  }
-  .catchphrase h3 {
-    text-align: center;
-  }
-
   /* CUSTOMER */
-  .customer {
-    color: #000000;
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
   .customer section {
     padding: 20px;
   }
@@ -74,7 +56,7 @@
     line-height: 2em;
   }
   .customer h1 {
-    color: rgba(31,85,95,1);
+    color: #1F555F;
   }
   .customer img {
     width: 100%;
@@ -86,16 +68,14 @@
 
   /* HOW IT WORKS */
   .howitworks {
-    background-color: rgb(108, 169, 153);
+    padding: 0px;
+    background-color: #6CA999;
   }
   .howitworks img {
     width: 100%;
   }
 
   /* SERVICE */
-  .service {
-    background-color: #37474f;
-  }
   .right-border {
     border-right: solid 1px gray;
   }
@@ -123,15 +103,8 @@
     margin: auto;
   }
 
-  /* INSTRUCTOR */
-  .instructor {
-    padding: 30px 0px 50px 0px;
-  }
   .instructor h1 {
-    width: 100%;
     font-weight: 600;
-    max-width: 100%;
-    text-align: left;
     color: #80cbc4;
     margin-bottom: 20px;
   }
@@ -186,14 +159,14 @@
 </header>
 <main>
   <!-- CATCHPHRASE -->
-  <article class="catchphrase">
+  <article class="catchphrase dark">
     <div class="container">
       <h1>헤드스타트는 한국 <b>데이터사이언스</b> 교육의 <b>기준</b>입니다.</h1>
       <h3>Headstart is standard of Data science in Korea.</h3>
     </div>
   </article>
   <!-- CUSTOMER -->
-  <article class="customer">
+  <article class="customer light">
     <div class="container">
       <h1>당신만을 위한 <b>커리큘럼을</b> 제공합니다.</h1>
       <div class="row">
@@ -226,7 +199,7 @@
     <img src="img/howitworks.png"/>
   </article>
   <!-- SERVICE -->
-  <article class="service row">
+  <article class="service dark row">
     <section class="col-md-4 right-border">
       <hr />
       <h3>BOOTCAMP</h3>
@@ -273,7 +246,7 @@
   </article>
   <!-- INSTRUCTOR -->
   <article id="instructor" class="instructor container">
-    <h1>INSTRUCTOR</h1>
+    <h1 class="left">INSTRUCTOR</h1>
     <div class="row">
       <figure class="col-md-3">
         <img class="circle" src="img/instructor-01.png" />
