--- a/app/views/partials/body/contacts.hbs
+++ b/app/views/partials/body/contacts.hbs
@@ -1,14 +1,6 @@
 <style>
   .contacts {
-    color: #e0e0e0;
-    background-color: #455a64;
-    padding: 30px 0px 30px 0px;
-  }
-  .contacts h3 {
-    width: 100%;
-    font-weight: 600;
-    max-width: 100%;
-    text-align: left;
+    color: #e0e0e0 !important;
   }
   .contacts section > span {
     line-height: 2em;
@@ -19,10 +11,10 @@
 </style>
 
 <!-- CONTACTS -->
-<article id="contacts" class="contacts">
+<article id="contacts" class="contacts dark">
   <div class="container">
     <section class="col-md-5">
-      <h3>CONTACTS</h3>
+      <h3 class="left">CONTACTS</h3>
       <span>
           Headstart Silicon Valley<br/>
           3350 Thomas rd, Santa Clara 95054<br/>
@@ -31,12 +23,10 @@
         </span>
     </section>
     <section class="col-md-7">
-      <!--<label for="basic-url">Your vanity URL</label>-->
       <div class="input-group">
         <span class="input-group-addon" id="basic-addon3">email</span>
         <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
       </div>
-      <!--<label for="basic-url2">Your vanity URL</label>-->
       <div class="input-group">
         <span class="input-group-addon" id="basic-addon4">message</span>
         <textarea class="form-control" id="basic-url2" aria-describedby="basic-addon4" rows="5"></textarea>
