--- a/app/views/bootcamp-apply.hbs
+++ b/app/views/bootcamp-apply.hbs
@@ -1,20 +1,3 @@
-<style>
-  main.bootcamp-apply {
-    color: #000000;
-  }
-  main.bootcamp-apply h3 {
-    margin-left: 0px;
-    text-align: left;
-  }
-
-  .btn.send {
-    font-size: 2em;
-    min-width: 150px;
-    min-height: 40px;
-    display: block;
-    margin: 20px auto 40px auto;
-  }
-</style>
 <script>
   $(function () {
     $('#buttonSend').click(function (){
@@ -26,7 +9,7 @@
 
 {{> body/header-bootcamp}}
 <main class="bootcamp-apply">
-  <article class="head">
+  <article class="head dark">
     <div class="container">
       <h2>Bootcamp Application</h2>
       <ul>
@@ -36,10 +19,10 @@
       </ul>
     </div>
   </article>
-  <article class="forms">
+  <article class="forms light">
     <div class="container">
       <section class="form">
-        <h3>필수 입력 사항</h3>
+        <h3 class="left">필수 입력 사항</h3>
         <div class="input-group">
           <span class="input-group-addon" id="form-name">성명</span>
           <input type="text" class="form-control" id="name" aria-describedby="form-name" placeholder="성명">
@@ -54,7 +37,7 @@
         </div>
       </section>
       <section class="form">
-        <h3>선택 입력 사항</h3>
+        <h3 class="left">선택 입력 사항</h3>
         <div class="input-group">
           <span class="input-group-addon" id="form-git">Git</span>
           <input type="text" class="form-control" id="git" aria-describedby="form-git" placeholder="url">
@@ -69,13 +52,13 @@
         </div>
       </section>
       <section class="form">
-        <h3>기타 입력 사항</h3>
+        <h3 class="left">기타 입력 사항</h3>
         <div class="input-group">
           <span class="input-group-addon" id="basic-intro">본인 소개</span>
           <textarea class="form-control" id="basic-intro" aria-describedby="basic-intro" rows="5" placeholder="Pre-Courses 수료 여부, 데이타 사이언스 경험, 프로그래밍 경험 및 직업"></textarea>
         </div>
       </section>
-      <button id="buttonSend" class="btn btn-default send">Send</button>
+      <button id="buttonSend" class="btn btn-default btn-large">Send</button>
     </div>
   </article>
 </main>
