--- a/app/views/bootcamp.hbs
+++ b/app/views/bootcamp.hbs
@@ -1,9 +1,5 @@
 <style>
   /* ITEM LIST */
-  article.item-list {
-    background-color: #ffffff;
-    color: #1F555F;
-  }
   .list-container {
     margin: 10px auto 10px auto;
     font-size: 1em;
@@ -31,55 +27,19 @@
   }
 
   /* CUSTOMER */
-  .customer {
-    color: #000000;
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
   .customer section {
     padding: 20px;
   }
-  .customer span {
-    line-height: 2em;
-  }
-  .customer h1 {
-    color: rgb(31,85,95);
-    margin-left: 0px;
-    text-align: left;
-  }
-  .customer img {
-    width: 100%;
-    padding: 15%;
-  }
   .customer h2 {
-    text-align: center;
     color: #80cbc4;
   }
 
-  /* CATCHPHRASE */
-  .catchphrase {
-    background-color: #37474f;
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-  .catchphrase h1 {
-    text-align: center;
-  }
-  .catchphrase h3 {
-    text-align: center;
-  }
-
   /* FEATURE */
-  .features {
-    color: #37474f;
-    margin: 20px 0px 20px 0px;
-  }
   .features .row {
     margin-left: auto;
     margin-right: auto;
   }
-  .features .border-box {
-    border: solid 2px;
+  .features .border.box {
     padding: 10px;
     min-height: 340px;
   }
@@ -99,17 +59,8 @@
   }
 
   /* US EXCLUSIVE */
-  .us-exlusive {
-    background-color: #80cbc4;
-  }
-  .us-exlusive img {
-    float: left;
-    width: 60px;
-    margin-right: 10px;
-  }
   .us-exlusive .border-box {
     height: 80px;
-    border: solid 2px #37474f;
     color: #000000;
     background-color: #ffffff;
     padding: 10px;
@@ -120,7 +71,7 @@
 {{> body/header-bootcamp}}
 <main>
   <!-- ITEM LIST -->
-  <article class="item-list">
+  <article class="item-list light">
     {{#each itemRows}}
     <div class="list-container container row">
         {{#each this}}
@@ -161,37 +112,37 @@
   </div>
 
   <!-- CUSTOMER -->
-  <article class="customer">
+  <article class="customer light">
     <div class="container">
-      <h1>Bootcamp 목적</h1>
+      <h1 class="left">Bootcamp 목적</h1>
       <div class="row">
-        <section class="col-md-4">
+        <section class="col-md-4 box tall">
           <figure>
             <img src="/img/bootcamp-man-climbing-stairs.png"/>
           </figure>
           <h2>For Beginner</h2>
-          <span>Data Science 를 처음 접하는 사람들을 위하여 현직 Data Scientist 가 디자인한 커리큘럼에 따라, R 을 활용하여 기본적인 코드를 스스로 작성할 수 있고, 이를 활용하기 위한 Pacage 와 Toolset을 사용할 수 있는 기초 단계의 Project 를 수행</span>
+          <p>Data Science 를 처음 접하는 사람들을 위하여 현직 Data Scientist 가 디자인한 커리큘럼에 따라, R 을 활용하여 기본적인 코드를 스스로 작성할 수 있고, 이를 활용하기 위한 Pacage 와 Toolset을 사용할 수 있는 기초 단계의 Project 를 수행</p>
         </section>
-        <section class="col-md-4">
+        <section class="col-md-4 box tall">
           <figure>
             <img src="/img/bootcamp-businessman-1.png"/>
           </figure>
           <h2>For Advancer</h2>
-          <span>Data 활용에 있어 Hadoop, Spark 와 같은 Big Data Tool 을 사용하여 Data 를 분석해내고 , Visualiztion 을 수행해 낼 수 있는 전문가로써의 능력을 향상시킬 수 있도록 디자인된 Project 를 수행하여 실무적 경험을 쌓고 Portfolio 를 제작할 수 있도록 진행</span>
+          <p>Data 활용에 있어 Hadoop, Spark 와 같은 Big Data Tool 을 사용하여 Data 를 분석해내고 , Visualiztion 을 수행해 낼 수 있는 전문가로써의 능력을 향상시킬 수 있도록 디자인된 Project 를 수행하여 실무적 경험을 쌓고 Portfolio 를 제작할 수 있도록 진행</p>
         </section>
-        <section class="col-md-4">
+        <section class="col-md-4 box tall">
           <figure>
             <img src="/img/bootcamp-business-agreement.png"/>
           </figure>
           <h2>To Collaborate</h2>
-          <span>기업 연계 Project 를 수행하여 Real Industry Data 를 분석 및 시각화를 수행하고 나아가 결과물에 숨겨져있는  사회적 현상과 미래 예측 등 산업에 활용할 수 있는 논리적 결론을 도출할 수 있도록 심화 Project  수행</span>
+          <p>기업 연계 Project 를 수행하여 Real Industry Data 를 분석 및 시각화를 수행하고 나아가 결과물에 숨겨져있는  사회적 현상과 미래 예측 등 산업에 활용할 수 있는 논리적 결론을 도출할 수 있도록 심화 Project  수행</p>
         </section>
       </div>
     </div>
   </article>
 
   <!-- CATCHPHRASE -->
-  <article class="catchphrase">
+  <article class="catchphrase dark">
     <div class="container">
       <h1>Headstart Bootcamp</h1>
       <h3>기존의 교육 방식과는 달리 현재 Data Scientist 로 활동하고 있는 전문가들의 경험을 바탕으로 디자인된 Project 를 Bootcamp 기간 동안 수행하여 기술적 능력과 실무적 능력을 향상시키고, 나아가 Portfolio 로 활용될 수 있도록 실전 경험 프로그램을 운영합니다.</h3>
@@ -199,13 +150,13 @@
   </article>
 
   <!-- FEATURES -->
-  <article class="features">
+  <article class="features light">
     <div class="container">
       <h1>Bootcamp Features</h1>
     </div>
     <div class="container row">
       <section class="col-md-4">
-        <div class="border-box">
+        <div class="border box">
           <h3>Project Base</h3>
           <ul>
             <li>
@@ -228,7 +179,7 @@
         </div>
       </section>
       <section class="col-md-4">
-        <div class="border-box">
+        <div class="border box">
           <h3>Real Industry</h3>
           <ul>
             <li>
@@ -247,7 +198,7 @@
         </div>
       </section>
       <section class="col-md-4">
-        <div class="border-box">
+        <div class="border box">
           <h3>From Basic to Intensive</h3>
           <ul>
             <li>
@@ -269,19 +220,19 @@
   </article>
 
   <!-- US EXCLUSIVE -->
-  <article class="us-exlusive">
+  <article class="us-exlusive till">
     <div class="container">
       <h1>Only US Bootcamp</h1>
       <div class="row">
         <div class="col-md-6">
-          <div class="border-box">
+          <div class="border box wide">
             <img src="/img/bootcamp-buildings.png"/>
             <b>현지 기업 방문</b>
             <p>Google, Apple, Tesla 등 글로벌 리더 기업 견학 프로그램</p>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="border-box">
+          <div class="border box wide">
             <img src="/img/bootcamp-vincent-thomas-bridge.png"/>
             <b>미국 기업 문화 체험</b>
             <p>현재 미국 가업에서 업무를 진행하는방식과 동일한 방법으로 진행</p>
@@ -290,14 +241,14 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <div class="border-box">
+          <div class="border box wide">
             <img src="/img/bootcamp-businessman-3.png"/>
             <b>Network 형성</b>
             <p>Social Event 에 참여하여 실리콘 밸리의 트렌드 를 읽고 글로벌 네트워크를 형성</p>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="border-box">
+          <div class="border box wide">
             <img src="/img/bootcamp-presentation.png"/>
             <b>Seminar & Workshop</b>
             <p>실리콘밸리 에서 진행되는 Seminar 및 Workshop 참여</p>
