--- a/app/views/precourse.hbs
+++ b/app/views/precourse.hbs
@@ -1,90 +1,28 @@
 <style>
-  main.precourse {
-    color: #000000;
-  }
-  .btn.btn-large {
-    font-size: 2em;
-    min-width: 150px;
-    min-height: 40px;
-    display: block;
-    margin: 20px auto 40px auto;
-  }
-
-  article.syllabus h2 {
-    margin-left: 0px;
-    text-align: left;
-  }
   article.syllabus .container {
     margin: 10px auto 10px auto;
-  }
-  article.syllabus table {
-    width: 100%;
-    border-spacing: 2px;
-    border-collapse: separate;
-  }
-  article.syllabus th {
-    border: solid 1px;
-    text-align: center;
-    padding: 2px;
-  }
-  article.syllabus td {
-    border: solid 1px;
-    padding: 3px 10px 3px 10px;
-  }
-
-  .box.tall section {
-    padding: 20px;
-  }
-  .box.tall p {
-    line-height: 2em;
-  }
-  .box.tall h1 {
-    color: rgb(31,85,95);
-    margin-left: 0px;
-    text-align: left;
-  }
-  .box.tall img {
-    width: 100%;
-    padding: 15%;
-  }
-  .box.tall h2 {
-    text-align: center;
-    color: #80cbc4;
-  }
-  .box.wide {
-    height: 80px;
-    color: #000000;
-    background-color: #ffffff;
-    padding: 10px;
-    margin: 10px;
-  }
-  .box.wide img {
-    float: left;
-    width: 60px;
-    margin-right: 10px;
-  }
-  .box.border {
-    border: solid 2px #37474f;
   }
 </style>
 
 {{> body/header-precourse}}
 <main class="precourse">
-  <article class="download">
+  <article class="download dark">
     <div class="container">
-      <h2>Pre-Courses Tool Install</h2>
+      <h2 class="left">Pre-Courses Tool Install</h2>
       <p>
         본 프로그램은 과제를 전달받기 위한 프로그램입니다.
         코딩에 소요된 시간을 기록하고, 사용자가 사용할 수 있는 언어와 활용 정도를
         한눈에 확인할 수 있도록 도표를 제공는 개발자를 위한 Tool 입니다.
       </p>
-      <button id="buttonDownload" class="btn btn-default btn-large">Download</button>
+      <a href="http://code.rpgify.com">
+        <button id="buttonDownload" class="btn btn-default btn-large">Download</button>
+      </a>
     </div>
   </article>
-  <article class="syllabus">
+  <article class="syllabus light">
     <div class="container">
-      <h2>Pre-Courses Syllabus</h2>
-      <table>
+      <h2 class="left">Pre-Courses Syllabus</h2>
+      <table class="default">
         <tr>
           <th colspan="2">
             First Step : Statistics
@@ -175,9 +113,9 @@
       </table>
     </div>
   </article>
-  <article class="goal">
+  <article class="goal light">
     <div class="container">
-      <h2>Pre-Courses 목표</h2>
+      <h2 class="left">Pre-Courses 목표</h2>
       <div class="row">
         <section class="col-md-3">
           <div class="box tall">
@@ -214,9 +152,9 @@
       </div>
     </div>
   </article>
-  <article class="target">
+  <article class="target light">
     <div class="container">
-      <h2>Pre-Courses 추천 대상</h2>
+      <h2 class="left">Pre-Courses 추천 대상</h2>
       <div class="row">
         <div class="col-md-4">
           <div class="box tall">
@@ -256,7 +194,7 @@
   </article>
   <article class="feature">
     <div class="container">
-      <h2>Pre-Courses 특징</h2>
+      <h2 class="left">Pre-Courses 특징</h2>
       <div class="row">
         <div class="col-md-6">
           <div class="box wide border">
@@ -355,5 +293,7 @@
       </div>
     </div>
   </article>
-  <button id="buttonStudyNow" class="btn btn-default btn-large">Study Now</button>
+  <a href="#buttonDownload">
+    <button id="buttonStudyNow" class="btn btn-default btn-large">Study Now</button>
+  </a>
 </main>
