--- a/app/views/bootcamp-detail.hbs
+++ b/app/views/bootcamp-detail.hbs
@@ -54,7 +54,7 @@
             과 정
           </th>
           <td>
-            Project 진행 + Feedback Seminar
+            {{{name}}}
           </td>
         </tr>
         <tr>
@@ -62,7 +62,7 @@
             장 소
           </th>
           <td>
-            3350 Thomas Rd, Santa Clara, CA, U.S, Headstart SiliconValley
+            {{{location}}}
           </td>
         </tr>
         <tr>
@@ -70,7 +70,7 @@
             기 간
           </th>
           <td>
-            Bootcamp 에 따라 다르게 표시
+            {{{campStart}}} ~ {{{campEnd}}}
           </td>
         </tr>
         <tr>
@@ -78,7 +78,7 @@
             일 정
           </th>
           <td>
-            9:00 A.M ~ 05:00 P.M (주 2회 Project Feedback Seminar)
+            {{{scheduleBrief}}}
           </td>
         </tr>
         <tr>
@@ -86,11 +86,7 @@
             Project List
           </th>
           <td>
-            산불 예측<br/>
-            자전거 수요 예측<br/>
-            Air BnB Data 를 활용한 여행객 수요 예측<br/>
-            의료 Data 를 활용한 암 진행 정도와 사망 연관성 분석<br/>
-            등등등
+            {{{projectList}}}
           </td>
         </tr>
         <tr>
@@ -98,7 +94,7 @@
             준비물
           </th>
           <td>
-            개인 노트북
+            {{{supplies}}}
           </td>
         </tr>
       </table>
@@ -110,33 +106,25 @@
   <article class="bootcamp-space light">
     <div class="container">
       <h2 class="left">Bootcamp Space</h2>
+      {{#each bootcampSpacePictures}}
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-4">
-          <img src="/img/background0.jpg"/>
+          <img src="{{this.[0]}}"/>
         </div>
         <div class="col-md-2"></div>
         <div class="col-md-4">
-          <img src="/img/background1.jpg"/>
+          {{#if this.[1]}}
+            <img src="{{this.[1]}}"/>
+          {{/if}}
         </div>
         <div class="col-md-1"></div>
       </div>
-      <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-4">
-          <img src="/img/background2.jpg"/>
-        </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-4">
-          <img src="/img/background3.jpg"/>
-        </div>
-        <div class="col-md-1"></div>
-      </div>
+      {{/each}}
       <ul>
-        <li>WIFI 제공</li>
-        <li>Printer, Fax, Copy Machine 사용가능</li>
-        <li>탕비실 완비</li>
-        <li>주차장</li>
+        {{#each bootcampSpaceDesciption}}
+        <li>{{this}}</li>
+        {{/each}}
       </ul>
     </div>
   </article>
@@ -146,64 +134,35 @@
   <article class="bootcamp-project-description light">
     <div class="container">
       <h2 class="left">Project Description</h2>
+      {{#each projectDescription}}
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-4">
           <section>
             <div class="name">
-              Project Name
+              {{this.[0].name}}
             </div>
             <div class="desc">
-              프로젝트 목표<br/>
-              사용 언어<br/>
-              소요 시간
+              {{{this.[0].description}}}
             </div>
           </section>
         </div>
         <div class="col-md-2"></div>
         <div class="col-md-4">
+        {{#if this.[1]}}
           <section>
             <div class="name">
-              Project Name
+              {{this.[1].name}}
             </div>
             <div class="desc">
-              프로젝트 목표<br/>
-              사용 언어<br/>
-              소요 시간
+              {{{this.[1].description}}}
             </div>
           </section>
+        {{/if}}
         </div>
         <div class="col-md-1"></div>
       </div>
-      <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-4">
-          <section>
-            <div class="name">
-              Project Name
-            </div>
-            <div class="desc">
-              프로젝트 목표<br/>
-              사용 언어<br/>
-              소요 시간
-            </div>
-          </section>
-        </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-4">
-          <section>
-            <div class="name">
-              Project Name
-            </div>
-            <div class="desc">
-              프로젝트 목표<br/>
-              사용 언어<br/>
-              소요 시간
-            </div>
-          </section>
-        </div>
-        <div class="col-md-1"></div>
-      </div>
+      {{/each}}
     </div>
   </article>
   <div class="container">
@@ -215,23 +174,25 @@
       <p>Bootcamp 진행 내용과 실제 Job Description 의 매칭 정도를 직접 확인하세요.</p>
       <div class="row">
         <div class="col-md-4">
+          {{#if bootcampDescription.[0]}}
           <section>
-            Headstart SV<br/>
-            Bootcamp<br/>
-            Desctiption<br/>
+            {{{bootcampDescription.[0]}}}
           </section>
+          {{/if}}
         </div>
         <div class="col-md-4">
+          {{#if bootcampDescription.[1]}}
           <section>
-            Job Description<br/>
-            (Glassdoor)
+            {{{bootcampDescription.[1]}}}
           </section>
+          {{/if}}
         </div>
         <div class="col-md-4">
+          {{#if bootcampDescription.[2]}}
           <section>
-            Job Description<br/>
-            (Monster)
+            {{{bootcampDescription.[2]}}}
           </section>
+          {{/if}}
         </div>
       </div>
     </div>
@@ -247,25 +208,17 @@
           캠프 일정 :
         </div>
         <div class="col-md-4">
-          <p>4주 (월요일 ~ 금요일)</p>
-          <p>9 am ~ 5 pm</p>
-          <p>주 1회 기업 방문 및 Field Trip</p>
-          <p>주 1회 이상 Social Event 참석</p>
-          <p>주 2회 Data Science Seminar (with Data Scientist)</p>
-          <h3>총 가격 : $10,000</h3>
+          {{#each schedule}}
+            <p>{{{this}}}</p>
+          {{/each}}
+          <h3>총 가격 : {{price}}</h3>
         </div>
         <div class="col-md-4">
           <div class="box">
             <ul>
-              <li>항공 티켓</li>
-              <li>차량 운행</li>
-              <li>숙박 시설</li>
-              <li>식사 제공(아침 & 저녁)</li>
-              <li>기업 방문</li>
-              <li>프로젝트 진행</li>
-              <li>포트폴리오 제작</li>
-              <li>Social Event 참여</li>
-              <li>생활 지원</li>
+              {{#each including}}
+                <li>{{{this}}}</li>
+              {{/each}}
             </ul>
           </div>
         </div>
@@ -276,6 +229,6 @@
     <!--<hr/>-->
   <!--</div>-->
   <article class="dark">
-    <a href="/bootcamp/1/apply"><button class="btn btn-default btn-large">Apply Now</button></a>
+    <a href="/bootcamp/{{id}}/apply"><button class="btn btn-default btn-large">Apply Now</button></a>
   </article>
 </main>
