--- a/app/views/partials/body/contacts.hbs
+++ b/app/views/partials/body/contacts.hbs
@@ -25,11 +25,11 @@
     <section class="col-md-7">
       <div class="input-group">
         <span class="input-group-addon" id="basic-addon3">email</span>
-        <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+        <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3" placeholder="연락 받으실 이메일">
       </div>
       <div class="input-group">
         <span class="input-group-addon" id="basic-addon4">message</span>
-        <textarea class="form-control" id="basic-url2" aria-describedby="basic-addon4" rows="5"></textarea>
+        <textarea class="form-control" id="basic-url2" aria-describedby="basic-addon4" rows="5" placeholder="문의 사항을 적어주세요"></textarea>
       </div>
       <div>
         <button class="btn btn-default">SEND</button>
