--- a/public/css/common.css
+++ b/public/css/common.css
@@ -183,7 +183,7 @@ table.default td {
   line-height: 2em;
 }
 .box.tall h1 {
-  color: rgb(31,85,95);
+  color: #37474f;
   margin-left: 0px;
   text-align: left;
 }
@@ -210,3 +210,33 @@ table.default td {
 .box.border {
   border: solid 2px #37474f;
 }
+
+.modal {
+  color: #37474f;
+}
+
+/* Social Buttons for Bootstrap */
+.btn-social{position:relative;padding-left:44px;text-align:left;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}.btn-social>:first-child{position:absolute;left:0;top:0;bottom:0;width:32px;line-height:34px;font-size:1.6em;text-align:center;border-right:1px solid rgba(0,0,0,0.2)}
+.btn-social.btn-lg{padding-left:61px}.btn-social.btn-lg>:first-child{line-height:45px;width:45px;font-size:1.8em}
+.btn-social.btn-sm{padding-left:38px}.btn-social.btn-sm>:first-child{line-height:28px;width:28px;font-size:1.4em}
+.btn-social.btn-xs{padding-left:30px}.btn-social.btn-xs>:first-child{line-height:20px;width:20px;font-size:1.2em}
+.btn-social-icon{position:relative;padding-left:44px;text-align:left;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;height:34px;width:34px;padding:0}.btn-social-icon>:first-child{position:absolute;left:0;top:0;bottom:0;width:32px;line-height:34px;font-size:1.6em;text-align:center;border-right:1px solid rgba(0,0,0,0.2)}
+.btn-social-icon.btn-lg{padding-left:61px}.btn-social-icon.btn-lg>:first-child{line-height:45px;width:45px;font-size:1.8em}
+.btn-social-icon.btn-sm{padding-left:38px}.btn-social-icon.btn-sm>:first-child{line-height:28px;width:28px;font-size:1.4em}
+.btn-social-icon.btn-xs{padding-left:30px}.btn-social-icon.btn-xs>:first-child{line-height:20px;width:20px;font-size:1.2em}
+.btn-social-icon>:first-child{border:none;text-align:center;width:100% !important}
+.btn-social-icon.btn-lg{height:45px;width:45px;padding-left:0;padding-right:0}
+.btn-social-icon.btn-sm{height:30px;width:30px;padding-left:0;padding-right:0}
+.btn-social-icon.btn-xs{height:22px;width:22px;padding-left:0;padding-right:0}
+.btn-naver{color:#fff;background-color:#38CF20;border-color:rgba(0,0,0,0.2)}.btn-naver:focus,.btn-naver.focus{color:#fff;background-color:#1FC700;border-color:rgba(0,0,0,0.2)}
+.btn-naver:hover{color:#fff;background-color:#1FC700;border-color:rgba(0,0,0,0.2)}
+.btn-naver:active,.btn-naver.active,.open>.dropdown-toggle.btn-naver{color:#fff;background-color:#1FC700;border-color:rgba(0,0,0,0.2)}.btn-naver:active:hover,.btn-naver.active:hover,.open>.dropdown-toggle.btn-naver:hover,.btn-naver:active:focus,.btn-naver.active:focus,.open>.dropdown-toggle.btn-naver:focus,.btn-naver:active.focus,.btn-naver.active.focus,.open>.dropdown-toggle.btn-naver.focus{color:#fff;background-color:#23345a;border-color:rgba(0,0,0,0.2)}
+.btn-naver:active,.btn-naver.active,.open>.dropdown-toggle.btn-naver{background-image:none}
+.btn-naver.disabled:hover,.btn-naver[disabled]:hover,fieldset[disabled] .btn-naver:hover,.btn-naver.disabled:focus,.btn-naver[disabled]:focus,fieldset[disabled] .btn-naver:focus,.btn-naver.disabled.focus,.btn-naver[disabled].focus,fieldset[disabled] .btn-naver.focus{background-color:#38CF20;border-color:rgba(0,0,0,0.2)}
+.btn-naver .badge{color:#38CF20;background-color:#fff}
+.btn-facebook{color:#fff;background-color:#3b5998;border-color:rgba(0,0,0,0.2)}.btn-facebook:focus,.btn-facebook.focus{color:#fff;background-color:#2d4373;border-color:rgba(0,0,0,0.2)}
+.btn-facebook:hover{color:#fff;background-color:#2d4373;border-color:rgba(0,0,0,0.2)}
+.btn-facebook:active,.btn-facebook.active,.open>.dropdown-toggle.btn-facebook{color:#fff;background-color:#2d4373;border-color:rgba(0,0,0,0.2)}.btn-facebook:active:hover,.btn-facebook.active:hover,.open>.dropdown-toggle.btn-facebook:hover,.btn-facebook:active:focus,.btn-facebook.active:focus,.open>.dropdown-toggle.btn-facebook:focus,.btn-facebook:active.focus,.btn-facebook.active.focus,.open>.dropdown-toggle.btn-facebook.focus{color:#fff;background-color:#23345a;border-color:rgba(0,0,0,0.2)}
+.btn-facebook:active,.btn-facebook.active,.open>.dropdown-toggle.btn-facebook{background-image:none}
+.btn-facebook.disabled:hover,.btn-facebook[disabled]:hover,fieldset[disabled] .btn-facebook:hover,.btn-facebook.disabled:focus,.btn-facebook[disabled]:focus,fieldset[disabled] .btn-facebook:focus,.btn-facebook.disabled.focus,.btn-facebook[disabled].focus,fieldset[disabled] .btn-facebook.focus{background-color:#3b5998;border-color:rgba(0,0,0,0.2)}
+.btn-facebook .badge{color:#3b5998;background-color:#fff}
